# tsad-orchestra

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  UI_GUIDE.md  benchmark.py  docker-compose.yml  measure_tool_usage.py  pyproject.toml  run_detection.py  run_ui.sh
.streamlit/: config.toml
scripts/: setup-uv.sh  setup.sh
scripts/db_migration/: tsb-uad.py
src/: logging_config.py  mcp_server.py  ui.py
src/agent/: client.py  models.py  prompts.py
src/benchmark/: agentic.py  agentic_no_validator.py  configurations.py  ensemble.py  run_baselines.py  run_time_agentic.py  run_time_agentic_no_validator.py  run_time_baselines.py  run_time_ensemble.py
src/plots/: avg_vus_roc_by_model.py  execution_time_barplot.py  token_usage_barplot.py  tool_usage_barplot.py
src/utils/: db.py  ensemble.py
